added top section

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pelvic goddess</title>
+  <title>Prenatal Fitness</title>
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-  
+
+  <section class="top" style="background-image: url(images/prenatalFitness/top/background.jpg);">
+    <div class="container--small">
+      <div class="top__inner">
+        <div class="top__content">
+          <h2 class="top__title main-title">prenatal fitness</h2>
+          <a class="top__link btn" href="#">start today</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
+
 </html>
