--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,41 @@
 
 <body>
 
+  <header class="header">
+    <div class="container--big">
+
+      <nav class="menu">
+
+        <a class="logo" href="#">
+          <img class="logo__img" src="images/logo.png" width="222" height="86" alt="logo">
+        </a>
+
+        <div class="menu__box">
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#">about me</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">physiotherapy</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">the studio</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">blog</a>
+            </li>
+          </ul>
+
+          <a class="menu__btn btn" href="#">book with me</a>
+
+        </div>
+
+      </nav>
+
+    </div>
+  </header>
+
   <section class="top" style="background-image: url(images/prenatalFitness/top/background.jpg);">
     <div class="container--small">
       <div class="top__inner">
