added therapy section

--- a/app/index.html
+++ b/app/index.html
@@ -45,16 +45,42 @@
     </div>
   </header>
 
-  <section class="top" style="background-image: url(images/prenatalFitness/top/background.jpg);">
-    <div class="container--small">
-      <div class="top__inner">
-        <div class="top__content">
-          <h2 class="top__title main-title">prenatal fitness</h2>
-          <a class="top__link btn" href="#">start today</a>
+  <main class="main">
+
+    <section class="top" style="background-image: url(images/prenatalFitness/top/background.jpg);">
+      <div class="container--small">
+        <div class="top__inner">
+          <div class="top__content">
+            <h2 class="top__title main-title">prenatal fitness</h2>
+            <a class="top__link btn" href="#">start today</a>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+    <section class="therapy">
+      <div class="container--small">
+        <div class="therapy__inner">
+          <img class="therapy__img" src="images/prenatalFitness/therapy/1.jpg" width="547" height="772" alt="">
+          <div class="therapy__content">
+            <h2 class="therapy__title">pelvic floor therapy meets prenatal fitn ess</h2>
+            <div class="therapy__text">
+              <p>
+                Preparing for Birth is a live and on-demand prenatal health and fitness program that is redefining the way women approach fitness during pregnancy. Designed and led by Registered Pelvic Floor Physiotherapist Hayley O’Hara, our program blends pelvic floor and core rehabilitation with yoga and strength to offer an unparalleled fitness experience for pregnant women.
+              </p>
+              <p>
+                Our mission is to help you stay fit and active during pregnancy while keeping your body + your baby safe, not just during pregnancy but also for the years that come after.
+              </p>
+              <p>
+                Working out during pregnancy requires a completely different approach in order for you prevent pelvic floor dysfunction (urinary leakage, pelvic organ prolapse, pelvic floor tension) and pelvic pain (low back pain, sacroiliac joint pain, symphysis pubis dysfunction), as well as to minimize the risk of prolonged labour that can come from having pelvic floor tension during birth.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
 
 </body>
 
