added start block

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
 
   <main class="main">
 
-    <section class="top" style="background-image: url(images/prenatalFitness/top/background.jpg);">
+    <section class="top border" style="background-image: url(images/prenatalFitness/top/background.jpg);">
       <div class="container--small">
         <div class="top__inner">
           <div class="top__content">
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-    <section class="therapy">
+    <section class="therapy border">
       <div class="container--small">
         <div class="therapy__inner">
           <img class="therapy__img" src="images/prenatalFitness/therapy/1.jpg" width="547" height="772" alt="">
@@ -79,6 +79,20 @@
         </div>
       </div>
     </section>
+
+    <div class="start" style="background-image: url(images/prenatalFitness/start/bg.jpg)">
+      <div class="contaoner--small">
+        <div class="start__text">
+          <p>
+            With live & on-demand weekly classes,
+            pelvic floor education, birth prep workshops,
+            guided meditation & more, our program will
+            take care of all your prenatal fitness needs.
+          </p>
+        </div>
+        <a class="start__link" href="#">START YOUR JOURNEY</a>
+      </div>
+    </div>
 
   </main>
 
