--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,57 @@
       </div>
     </div>
 
+    <section class="service">
+      <div class="container--small">
+        <h2 class="title">services</h2>
+        <ul class="service__list">
+          <li class="service__item">
+            <div class="service__box">
+              <img class="service__img" src="images/prenatalFitness/service/1.jpg" width="350" height="435" alt="">
+              <h3 class="service__title">live schedule</h3>
+              <div class="service__text">
+                <p>
+                  Check out our LIVE schedule, including
+                  classes, workshops, and special events, to get
+                  a glimpse into the full PFB program!
+                </p>
+              </div>
+            </div>
+            <a class="service__btn btn" href="#">see more</a>
+          </li>
+          <li class="service__item">
+            <div class="service__box">
+              <img class="service__img" src="images/prenatalFitness/service/2.jpg" width="350" height="435" alt="">
+              <h3 class="service__title">the PFB method</h3>
+              <div class="service__text">
+                <p>
+                  Our signature Preparing for Birth program
+                  wraps all of your prenatal health and wellness
+                  needs into one.
+                </p>
+              </div>
+            </div>
+            <a class="service__btn btn" href="#">see more</a>
+          </li>
+          <li class="service__item">
+            <div class="service__box">
+              <img class="service__img" src="images/prenatalFitness/service/3.jpg" width="350" height="435" alt="">
+              <h3 class="service__title">1-on-1 Sessions</h3>
+              <div class="service__text">
+                <p>
+                  Looking for 1-on-1 support for your pelvic
+                  health or fitness? Book a private session
+                  with Hayley — most insurance providers
+                  offer Physiotherapy coverage!
+                </p>
+              </div>
+            </div>
+            <a class="service__btn btn" href="#">see more</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
   </main>
 
 </body>
