added tariffs section

--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,50 @@
       </div>
     </div>
 
+    <section class="tariffs border">
+      <div class="container--small">
+        <h2 class="title">the signature classes</h2>
+
+        <div class="tariffs__inner">
+          <ul class="tariffs__header-list">
+            <li class="tariffs__header-item">
+              <button class="tariffs__header-btn" type="button">Prenatal <br> yoga</button>
+            </li>
+            <li class="tariffs__header-item">
+              <button class="tariffs__header-btn tariffs__header-btn--active" type="button">prenatal core & <br> pelvic floor</button>
+            </li>
+            <li class="tariffs__header-item">
+              <button class="tariffs__header-btn" type="button">Prenatal <br> Full-Body Sculpt</button>
+            </li>
+          </ul>
+          <ul class="tariffs__body-list">
+            <li class="tariffs__body-item tariffs__body-item--active">
+              <div class="tariffs__body-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales ut etiam sit amet nisl purus in mollis nunc. Faucibus turpis in eu mi. Lacus sed viverra tellus in. Est ante in nibh mauris. Tortor consequat id porta nibh venenatis cras. In est ante in nibh mauris cursus. Luctus accumsan tortor posuere ac ut consequat. Vitae ultricies leo integer malesuada nunc vel. Morbi tincidunt augue interdum velit euismod in pellentesque.
+                </p>
+              </div>
+            </li>
+            <li class="tariffs__body-item">
+              <div class="tariffs__body-text">
+                <p>
+                  hyhyh
+                </p>
+              </div>
+            </li>
+            <li class="tariffs__body-item">
+              <div class="tariffs__body-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales ut etiam sit amet nisl purus in mollis nunc. Faucibus turpis in eu mi. Lacus sed viverra tellus in. Est ante in nibh mauris. Tortor consequat id porta nibh venenatis cras. In est ante in nibh mauris cursus. Luctus accumsan tortor posuere ac ut consequat. Vitae ultricies leo integer malesuada nunc vel. Morbi tincidunt augue interdum velit euismod in pellentesque.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </section>
+
     <section class="service">
       <div class="container--small">
         <h2 class="title">services</h2>
@@ -146,7 +190,7 @@
     </section>
 
   </main>
-
+<script src="js/main.min.js"></script>
 </body>
 
 </html>
