--- a/app/index.html
+++ b/app/index.html
@@ -138,7 +138,7 @@
       </div>
     </section>
 
-    <section class="service">
+    <section class="service border">
       <div class="container--small">
         <h2 class="title">services</h2>
         <ul class="service__list">
@@ -184,6 +184,34 @@
               </div>
             </div>
             <a class="service__btn btn" href="#">see more</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="container--small">
+        <h2 class="reviews__title">kind words</h2>
+        <ul class="reviews__list">
+          <li class="reviews__item">
+            <blockquote class="reviews__card">
+              <div class="reviews__text">
+                <p>
+                  “I had a difficult pregnancy and birth experience with  my first that left me with pelvic floor issues. I was  also diagnosed with diastasis that made it hard to get  my body back. During my second pregnancy, I joined  PFB and it made a HUGE difference”
+                </p>
+              </div>
+            </blockquote>
+            <cite class="reviews__name">Sarah M.</cite>
+          </li>
+          <li class="reviews__item">
+            <blockquote class="reviews__card">
+              <div class="reviews__text">
+                <p>
+                  “I had a difficult pregnancy and birth experience with  my first that left me with pelvic floor issues. I was  also diagnosed with diastasis that made it hard to get  my body back. During my second pregnancy, I joined  PFB and it made a HUGE difference”
+                </p>
+              </div>
+            </blockquote>
+            <cite class="reviews__name">Sarah M.</cite>
           </li>
         </ul>
       </div>
