--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
 
     <div class="start" style="background-image: url(images/prenatalFitness/start/bg.jpg)">
       <div class="contaoner--small">
-        <div class="start__text">
+        <div class="start__text text--big">
           <p>
             With live & on-demand weekly classes,
             pelvic floor education, birth prep workshops,
@@ -90,7 +90,7 @@
             take care of all your prenatal fitness needs.
           </p>
         </div>
-        <a class="start__link" href="#">START YOUR JOURNEY</a>
+        <a class="start__link link--arrow" href="#">START YOUR JOURNEY</a>
       </div>
     </div>
 
@@ -195,7 +195,7 @@
         <ul class="reviews__list">
           <li class="reviews__item">
             <blockquote class="reviews__card">
-              <div class="reviews__text">
+              <div class="reviews__text text--big">
                 <p>
                   “I had a difficult pregnancy and birth experience with  my first that left me with pelvic floor issues. I was  also diagnosed with diastasis that made it hard to get  my body back. During my second pregnancy, I joined  PFB and it made a HUGE difference”
                 </p>
@@ -205,7 +205,7 @@
           </li>
           <li class="reviews__item">
             <blockquote class="reviews__card">
-              <div class="reviews__text">
+              <div class="reviews__text text--big">
                 <p>
                   “I had a difficult pregnancy and birth experience with  my first that left me with pelvic floor issues. I was  also diagnosed with diastasis that made it hard to get  my body back. During my second pregnancy, I joined  PFB and it made a HUGE difference”
                 </p>
@@ -214,6 +214,18 @@
             <cite class="reviews__name">Sarah M.</cite>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <section class="consult border" style="background-image: url(images/prenatalFitness/consult/bg.jpg)">
+      <div class="container--small">
+        <h2 class="consult__title">complimentary consult</h2>
+        <div class="consult__text text--big">
+          <p>
+            book a complimentary 15 minute call to discuss your symptoms and decide on the best route of action.
+          </p>
+        </div>
+        <a class="consult__link link--arrow" href="#">book now</a>
       </div>
     </section>
 
