--- a/app/index.html
+++ b/app/index.html
@@ -229,8 +229,38 @@
       </div>
     </section>
 
+    <section class="new border">
+      <div class="container--big">
+        <div class="new__inner">
+          <h2 class="new__title">new on the ‘gram</h2>
+          <ul class="new__list">
+            <li class="new__item">
+              <a class="new__link" href="https://www.youtube.com/watch?v=wHLa3bw9OzU" data-fancybox="images" data-width="2048" data-height="1365">
+                <img class="new__img" src="images/prenatalFitness/new/1.jpg" width="366" height="426" alt="">
+              </a>
+            </li>
+            <li class="new__item">
+              <a class="new__link" href="images//prenatalFitness/new/2.jpg" data-fancybox="images" data-width="2048" data-height="1365">
+                <img class="new__img" src="images/prenatalFitness/new/2.jpg" width="369" height="456" alt="">
+              </a>
+            </li>
+            <li class="new__item">
+              <a class="new__link" href="https://www.youtube.com/watch?v=wHLa3bw9OzU" data-fancybox="images" data-width="2048" data-height="1365">
+                <img class="new__img" src="images/prenatalFitness/new/3.jpg" width="366" height="426" alt="">
+              </a>
+            </li>
+            <li class="new__item">
+              <a class="new__link" href="images/prenatalFitness/new/4.jpg" data-fancybox="images" data-width="2048" data-height="1365">
+                <img class="new__img" src="images/prenatalFitness/new/4.jpg" width="369" height="456" alt="">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
   </main>
-<script src="js/main.min.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
