added subscribe section

--- a/app/index.html
+++ b/app/index.html
@@ -259,6 +259,29 @@
       </div>
     </section>
 
+    <section class="subscribe border">
+      <div class="container--small">
+        <h2 class="subscribe__title title">subscribe to my mailing list</h2>
+        <form class="subscribe__form" action="#">
+          <ul class="subscribe__list">
+            <li class="subscribe__item">
+              <input class="subscribe__field" type="text">
+              <span class="subscribe__text">first name</span>
+            </li>
+            <li class="subscribe__item">
+              <input class="subscribe__field" type="text">
+              <span class="subscribe__text">last name</span>
+            </li>
+            <li class="subscribe__item">
+              <input class="subscribe__field" type="email">
+              <span class="subscribe__text">email</span>
+            </li>
+          </ul>
+          <a class="subscribe__btn btn" href="#">subscribe now</a>
+        </form>
+      </div>
+    </section>
+
   </main>
   <script src="js/main.min.js"></script>
 </body>
