--- a/app/index.html
+++ b/app/index.html
@@ -283,6 +283,68 @@
     </section>
 
   </main>
+
+  <footer class="footer">
+    <div class="container--small">
+      <div class="footer__top">
+
+        <nav class="menu">
+          <div class="menu__box">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href="#">about me</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">physiotherapy</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">the studio</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">blog</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">book with me</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+        <a class="logo" href="#">
+          <img class="logo__img" src="images/logo--footer.png" width="258" height="248" alt="logo">
+        </a>
+
+        <ul class="contacts">
+          <li class="contacts__item">
+            <a class="contacts__link" href="#" target="_blank">
+              <img src="images/contacts/instagram.svg" width="29" height="29" alt="instagram">
+            </a>
+          </li>
+          <li class="contacts__item">
+            <a class="contacts__link" href="#" target="_blank">
+              <img src="images/contacts/facebook.svg" width="18" height="33" alt="facebook">
+            </a>
+          </li>
+          <li class="contacts__item">
+            <a class="contacts__link" href="#" target="_blank">
+              <img src="images/contacts/email.svg" width="33" height="25" alt="email">
+            </a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+
+    <span class="border"></span>
+
+    <div class="container--big">
+      <div class="footer__bottom">
+        <a class="footer__confidentiality" href="#">Privacy Policy   Terms & Conditions</a>
+        <span class="copy">©Pelvic Goddess 2022 All Rights Reserved  </span>
+      </div>
+    </div>
+
+  </footer>
   <script src="js/main.min.js"></script>
 </body>
 
