--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
     <section class="therapy border">
       <div class="container--small">
         <div class="therapy__inner">
-          <img class="therapy__img" src="images/prenatalFitness/therapy/1.jpg" width="547" height="772" alt="">
+          <img class="therapy__img" src="images/prenatalFitness/therapy/1.jpg" width="547" height="772" alt="pregnant girl">
           <div class="therapy__content">
             <h2 class="therapy__title">pelvic floor therapy meets prenatal fitn ess</h2>
             <div class="therapy__text">
@@ -197,7 +197,7 @@
             <blockquote class="reviews__card">
               <div class="reviews__text text--big">
                 <p>
-                  “I had a difficult pregnancy and birth experience with  my first that left me with pelvic floor issues. I was  also diagnosed with diastasis that made it hard to get  my body back. During my second pregnancy, I joined  PFB and it made a HUGE difference”
+                  “I had a difficult pregnancy and birth experience with my first that left me with pelvic floor issues. I was  also diagnosed with diastasis that made it hard to get  my body back. During my second pregnancy, I joined  PFB and it made a HUGE difference”
                 </p>
               </div>
             </blockquote>
@@ -207,7 +207,7 @@
             <blockquote class="reviews__card">
               <div class="reviews__text text--big">
                 <p>
-                  “I had a difficult pregnancy and birth experience with  my first that left me with pelvic floor issues. I was  also diagnosed with diastasis that made it hard to get  my body back. During my second pregnancy, I joined  PFB and it made a HUGE difference”
+                  “I had a difficult pregnancy and birth experience with my first that left me with pelvic floor issues. I was  also diagnosed with diastasis that made it hard to get  my body back. During my second pregnancy, I joined  PFB and it made a HUGE difference”
                 </p>
               </div>
             </blockquote>
@@ -215,6 +215,9 @@
           </li>
         </ul>
       </div>
+      
+      <img class="logo--decor" src="images/logo--decor.png" alt="logo">
+
     </section>
 
     <section class="consult border" style="background-image: url(images/prenatalFitness/consult/bg.jpg)">
@@ -277,7 +280,7 @@
               <span class="subscribe__text">email</span>
             </li>
           </ul>
-          <a class="subscribe__btn btn" href="#">subscribe now</a>
+          <button class="subscribe__btn btn" type="submit">subscribe now</button>
         </form>
       </div>
     </section>
@@ -340,7 +343,7 @@
     <div class="container--big">
       <div class="footer__bottom">
         <a class="footer__confidentiality" href="#">Privacy Policy   Terms & Conditions</a>
-        <span class="copy">©Pelvic Goddess 2022 All Rights Reserved  </span>
+        <span class="copy">©Pelvic Goddess 2022 All Rights Reserved</span>
       </div>
     </div>
 
